src/app/app.component.css
:host {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: stretch;
  height: 100%;
  width: 100%;
  font-family: Nunito, Roboto, Montserrat, serif;
  overflow: hidden;
}

.wrapper {
  position: relative;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 100%;
  min-width: 300px;
  height: 100%;
}

.main {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  margin: 1rem auto;
  max-width: 1920px;
  width: 90%;
  height: auto;
  overflow-y: scroll;
  transition: color 300ms, background-color 300ms;
  z-index: 1;
}

.glass {
  background: transparent;
  backdrop-filter: blur(4px);
  border-radius: 5px;
  box-shadow: 0 0 5px 1px var(--glass-shadow);
  text-shadow: 2px 2px 2px var(--glass-shadow);
}

.neon {
  background: radial-gradient(circle at 0% 100%, rgba(8, 25, 235, 0.4), transparent 30%),
  radial-gradient(circle at 0% 80%, rgba(8, 227, 235, .40), transparent 30%),
  radial-gradient(circle at 15% 100%, rgba(8, 227, 235, .40), transparent 30%),
  radial-gradient(circle at 100% 0%, rgba(8, 25, 235, 0.4), transparent 30%),
  radial-gradient(circle at 85% 0%, rgba(8, 227, 235, .40), transparent 30%),
  radial-gradient(circle at 100% 20%, rgba(8, 227, 235, .40), transparent 30%);
}

.navbar {
  position: sticky;
}

.page {
  flex-grow: 1;
}

.settings {
  position: absolute;
  top: 2rem;
  right: 2rem;
  z-index: 1;
}

.settings-icon {
  width: 32px;
  height: 32px;
}

.right-drawer {
  display: flex;
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  height: 80vh;
  width: 0;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  transition: width 100ms ease-in-out;
  overflow: scroll;
  z-index: 1;
}

.show {
  width: 100px;
}

.switcher {
  visibility: hidden;
}

@media (prefers-color-scheme: light) {
  .wrapper {
    background-color: var(--light-bg);
    color: var(--light-text-color);
  }

  .wrapper.dark-theme {
    background-color: var(--dark-bg);
    color: var(--dark-text-color);
  }
}

@media (prefers-color-scheme: dark) {
  .wrapper {
    background-color: var(--dark-bg);
    color: var(--dark-text-color);
  }

  .wrapper.light-theme {
    background-color: var(--light-bg);
    color: var(--light-text-color);
  }
}

.svg-lines {
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
}

